--- a/starter/package.json
+++ b/starter/package.json
@@ -9,8 +9,8 @@
   },
   "dependencies": {
     "body-parser": "1.20.0",
-    "express": "4.18.2",
-    "http-proxy-middleware": "2.0.6",
+    "express": "^4.21.2",
+    "http-proxy-middleware": "^2.0.7",
     "node-fetch": "2.7.0"
   }
 }
